# coursera

./: README.md
crypto-007/: .gitignore
crypto-007/w1/: Makefile  README.md  wigwilly.hs
crypto-007/w2/: Makefile  README.md  foosie.hs
crypto-007/w3/: Makefile  README.md  jigsaw.hs
crypto-007/w4/: Makefile  README.md  powderwell.cabal
crypto-007/w4/src/: Powderwell.hs
crypto-007/w5/: Makefile  README.md  bayport.cabal
crypto-007/w5/src/: Bayport.hs  Moduli.hs
crypto-007/w6/: Dustify.hs  Makefile  Nearbies.hs  README.md
discrete-optimization/w2-knapsack/: Cargo.toml
discrete-optimization/w2-knapsack/src/: main.rs  parser.rs  solver.rs
