Name:    powderwell
Version: 0.0.1.0

Synopsis: Padding oracle exploit homework
License:      PublicDomain
License-File: LICENSE

Cabal-Version: >= 1.8
Build-Type:    Simple

Executable powderwell

  Ghc-options:    -Wall -O2
  Hs-source-dirs: src
  Main-is:        Powderwell.hs

  Build-depends:
    base         >= 4 && < 5,
    bytestring   >= 0.10,
    io-streams   >= 1.0,
    http-streams >= 0.6
